--- a/backend/package.json
+++ b/backend/package.json
@@ -9,21 +9,25 @@
     "dev": "node --watch src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["instagram", "automation", "puppeteer"],
+  "keywords": [
+    "instagram",
+    "automation",
+    "puppeteer"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "^21.6.1",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "firebase-admin": "^12.0.0",
+    "axios": "^1.13.2",
     "bull": "^4.12.0",
-    "node-cron": "^3.0.3",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
+    "instagram-private-api": "^1.46.1",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1",
-    "crypto-js": "^4.2.0"
+    "node-cron": "^3.0.3",
+    "puppeteer": "^24.32.0",
+    "uuid": "^9.0.1"
   }
 }
