--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
     "instagram-private-api": "^1.46.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "openai": "^6.10.0",
+    "replicate": "^1.4.0",
     "uuid": "^9.0.1"
   }
 }
