--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,17 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "axios": "^1.6.2",
+        "date-fns": "^3.0.6",
+        "firebase": "^10.7.1",
         "next": "^14.0.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "firebase": "^10.7.1",
-        "axios": "^1.6.2",
         "react-dropzone": "^14.2.3",
-        "date-fns": "^3.0.6",
         "react-hot-toast": "^2.4.1"
     },
     "devDependencies": {
+        "@types/react": "19.2.7",
         "eslint": "^8.55.0",
         "eslint-config-next": "^14.0.4"
     }
