--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "devDependencies": {
         "@types/react": "19.2.7",
         "eslint": "^8.55.0",
-        "eslint-config-next": "^14.0.4"
+        "eslint-config-next": "^14.0.4",
+        "typescript": "5.9.3"
     }
 }
