--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^12.0.0",
+    "form-data": "^4.0.5",
     "instagram-private-api": "^1.46.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
